fix dark mode arrow

--- a/changelog/changelog.css
+++ b/changelog/changelog.css
@@ -61,13 +61,11 @@ body.dark-mode .changelog-title {
 body.dark-mode .arrow-down::before {
     content: '\25BC';
     margin-left: 8px;
-    background-color: #ffffff;
     color: #ffffff;
 }
 
 body.dark-mode .arrow-left::before {
     content: '\25B6';
     margin-left: 8px;
-    background-color: #ffffff;
     color: #ffffff;
 }
